Finish static pages

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,6 @@
-<h1>Sample App#home</h1>
+<% provide(:title, 'Home') %>
+
+<h1>Sample App</h1>
 This is the home page for the
 <p>
 	<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
